aliena grande on mobile centering issue fixed- probably

--- a/blocks/hq-content.css
+++ b/blocks/hq-content.css
@@ -509,7 +509,12 @@
       blinkCursor 0.7s step-end infinite 0.5s;
   }
 }
-@media (max-width: 661px) {
+@media (max-width: 660px) {
+  .aliena-ship {
+    width: 100%;
+    max-width: 300px;
+    max-height: 300px;
+  }
   .portfolio-title {
     font-size: 40px;
     margin-top: -50px;
